--- a/Data collection/NIFTY_data_manipulation.ipynb
+++ b/Data collection/NIFTY_data_manipulation.ipynb
@@ -49,34 +49,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1['Date'] = pd.to_datetime(df1['Date'], dayfirst=True)\n",
-    "df2['Date'] = pd.to_datetime(df2['Date'], dayfirst=True)\n",
+    "df1['Date'] = pd.to_datetime(df1['Date'], format='%d-%m-%Y')\n",
+    "df2['Date'] = pd.to_datetime(df2['Date'], format='%d-%m-%Y')\n",
     "combined_df = pd.concat([df1, df2])\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 40,
+   "id": "12d579b0-d866-4adc-ad26-2b2ab107aac4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dataframe manipulation\n",
+    "combined_df = combined_df.drop_duplicates(subset='Date')\n",
+    "combined_df = combined_df.sort_values(by='Date').reset_index(drop=True)\n",
+    "end_date = pd.to_datetime('01-06-2024', dayfirst=True)\n",
+    "filtered_df = combined_df[combined_df['Date'] <= end_date]\n",
+    "filtered_df = filtered_df.drop(columns=['Change %'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "id": "079262e9-86dd-4122-8f85-f71b20413321",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Rushi\\AppData\\Local\\Temp\\ipykernel_18932\\1170213893.py:6: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  filtered_df['Vol.'] = filtered_df['Vol.'].str.replace('B', '')\n",
-      "C:\\Users\\Rushi\\AppData\\Local\\Temp\\ipykernel_18932\\1170213893.py:7: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  filtered_df.rename(columns = {'Price':'Close', 'Vol.':'Volume (in Billion)'}, inplace = True)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -116,42 +114,42 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2000-01-03</th>\n",
-       "      <td>1,592.20</td>\n",
-       "      <td>1,482.15</td>\n",
-       "      <td>1,592.90</td>\n",
-       "      <td>1,482.15</td>\n",
+       "      <td>1592.20</td>\n",
+       "      <td>1482.15</td>\n",
+       "      <td>1592.90</td>\n",
+       "      <td>1482.15</td>\n",
        "      <td>25.36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-04</th>\n",
-       "      <td>1,638.70</td>\n",
-       "      <td>1,594.40</td>\n",
-       "      <td>1,641.95</td>\n",
-       "      <td>1,594.40</td>\n",
+       "      <td>1638.70</td>\n",
+       "      <td>1594.40</td>\n",
+       "      <td>1641.95</td>\n",
+       "      <td>1594.40</td>\n",
        "      <td>38.79</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-05</th>\n",
-       "      <td>1,595.80</td>\n",
-       "      <td>1,634.55</td>\n",
-       "      <td>1,635.50</td>\n",
-       "      <td>1,555.05</td>\n",
+       "      <td>1595.80</td>\n",
+       "      <td>1634.55</td>\n",
+       "      <td>1635.50</td>\n",
+       "      <td>1555.05</td>\n",
        "      <td>62.15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-06</th>\n",
-       "      <td>1,617.60</td>\n",
-       "      <td>1,595.80</td>\n",
-       "      <td>1,639.00</td>\n",
-       "      <td>1,595.80</td>\n",
+       "      <td>1617.60</td>\n",
+       "      <td>1595.80</td>\n",
+       "      <td>1639.00</td>\n",
+       "      <td>1595.80</td>\n",
        "      <td>51.27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-07</th>\n",
-       "      <td>1,613.30</td>\n",
-       "      <td>1,616.60</td>\n",
-       "      <td>1,628.25</td>\n",
-       "      <td>1,597.20</td>\n",
+       "      <td>1613.30</td>\n",
+       "      <td>1616.60</td>\n",
+       "      <td>1628.25</td>\n",
+       "      <td>1597.20</td>\n",
        "      <td>54.32</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -164,42 +162,42 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2024-05-27</th>\n",
-       "      <td>22,932.45</td>\n",
-       "      <td>23,038.95</td>\n",
-       "      <td>23,110.80</td>\n",
-       "      <td>22,871.20</td>\n",
+       "      <td>22932.45</td>\n",
+       "      <td>23038.95</td>\n",
+       "      <td>23110.80</td>\n",
+       "      <td>22871.20</td>\n",
        "      <td>260.01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2024-05-28</th>\n",
-       "      <td>22,888.15</td>\n",
-       "      <td>22,977.15</td>\n",
-       "      <td>22,998.55</td>\n",
-       "      <td>22,858.50</td>\n",
+       "      <td>22888.15</td>\n",
+       "      <td>22977.15</td>\n",
+       "      <td>22998.55</td>\n",
+       "      <td>22858.50</td>\n",
        "      <td>217.89</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2024-05-29</th>\n",
-       "      <td>22,704.70</td>\n",
-       "      <td>22,762.75</td>\n",
-       "      <td>22,825.50</td>\n",
-       "      <td>22,685.45</td>\n",
+       "      <td>22704.70</td>\n",
+       "      <td>22762.75</td>\n",
+       "      <td>22825.50</td>\n",
+       "      <td>22685.45</td>\n",
        "      <td>269.93</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2024-05-30</th>\n",
-       "      <td>22,488.65</td>\n",
-       "      <td>22,617.45</td>\n",
-       "      <td>22,705.75</td>\n",
-       "      <td>22,417.00</td>\n",
+       "      <td>22488.65</td>\n",
+       "      <td>22617.45</td>\n",
+       "      <td>22705.75</td>\n",
+       "      <td>22417.00</td>\n",
        "      <td>373.37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2024-05-31</th>\n",
-       "      <td>22,530.70</td>\n",
-       "      <td>22,568.10</td>\n",
-       "      <td>22,653.75</td>\n",
-       "      <td>22,465.10</td>\n",
+       "      <td>22530.70</td>\n",
+       "      <td>22568.10</td>\n",
+       "      <td>22653.75</td>\n",
+       "      <td>22465.10</td>\n",
        "      <td>572.12</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -208,44 +206,51 @@
        "</div>"
       ],
       "text/plain": [
-       "                Close       Open       High        Low Volume (in Billion)\n",
-       "Date                                                                      \n",
-       "2000-01-03   1,592.20   1,482.15   1,592.90   1,482.15               25.36\n",
-       "2000-01-04   1,638.70   1,594.40   1,641.95   1,594.40               38.79\n",
-       "2000-01-05   1,595.80   1,634.55   1,635.50   1,555.05               62.15\n",
-       "2000-01-06   1,617.60   1,595.80   1,639.00   1,595.80               51.27\n",
-       "2000-01-07   1,613.30   1,616.60   1,628.25   1,597.20               54.32\n",
-       "...               ...        ...        ...        ...                 ...\n",
-       "2024-05-27  22,932.45  23,038.95  23,110.80  22,871.20              260.01\n",
-       "2024-05-28  22,888.15  22,977.15  22,998.55  22,858.50              217.89\n",
-       "2024-05-29  22,704.70  22,762.75  22,825.50  22,685.45              269.93\n",
-       "2024-05-30  22,488.65  22,617.45  22,705.75  22,417.00              373.37\n",
-       "2024-05-31  22,530.70  22,568.10  22,653.75  22,465.10              572.12\n",
+       "               Close      Open      High       Low  Volume (in Billion)\n",
+       "Date                                                                   \n",
+       "2000-01-03   1592.20   1482.15   1592.90   1482.15                25.36\n",
+       "2000-01-04   1638.70   1594.40   1641.95   1594.40                38.79\n",
+       "2000-01-05   1595.80   1634.55   1635.50   1555.05                62.15\n",
+       "2000-01-06   1617.60   1595.80   1639.00   1595.80                51.27\n",
+       "2000-01-07   1613.30   1616.60   1628.25   1597.20                54.32\n",
+       "...              ...       ...       ...       ...                  ...\n",
+       "2024-05-27  22932.45  23038.95  23110.80  22871.20               260.01\n",
+       "2024-05-28  22888.15  22977.15  22998.55  22858.50               217.89\n",
+       "2024-05-29  22704.70  22762.75  22825.50  22685.45               269.93\n",
+       "2024-05-30  22488.65  22617.45  22705.75  22417.00               373.37\n",
+       "2024-05-31  22530.70  22568.10  22653.75  22465.10               572.12\n",
        "\n",
        "[6071 rows x 5 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Dataframe manipulation\n",
-    "combined_df = combined_df.drop_duplicates(subset='Date')\n",
-    "combined_df = combined_df.sort_values(by='Date').reset_index(drop=True)\n",
-    "end_date = pd.to_datetime('01-06-2024', dayfirst=True)\n",
-    "filtered_df = combined_df[combined_df['Date'] <= end_date]\n",
-    "filtered_df['Vol.'] = filtered_df['Vol.'].str.replace('B', '')\n",
+    "# Function to convert volumes to billions\n",
+    "def convert_value(value):\n",
+    "    if isinstance(value, str):\n",
+    "        value = value.replace(',', '')  # Remove commas\n",
+    "        if 'B' in value:\n",
+    "            return float(value.replace('B', ''))\n",
+    "        elif 'M' in value:\n",
+    "            return float(value.replace('M', '')) / 1000  # Convert million to billion\n",
+    "    return float(value)\n",
+    "\n",
+    "for col in filtered_df.columns:\n",
+    "    if col != 'Date':\n",
+    "        filtered_df[col] = filtered_df[col].apply(convert_value)\n",
+    "\n",
     "filtered_df.rename(columns = {'Price':'Close', 'Vol.':'Volume (in Billion)'}, inplace = True)\n",
-    "filtered_df = filtered_df.drop(columns=['Change %'])\n",
     "filtered_df.set_index(\"Date\", inplace=True)\n",
     "filtered_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "id": "69e3d4c1-38fe-4113-bacd-3d01b279e0df",
    "metadata": {},
    "outputs": [],
@@ -256,15 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26caa2a7-1c3e-4ebe-a51f-f0f4d32a701e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9af826c2-81df-493f-9424-27124898643a",
+   "id": "20401a9b-4f02-4090-acb1-1f69d49f2de4",
    "metadata": {},
    "outputs": [],
    "source": []
